--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,20 @@
 [flake8]
-ignore =
-    W503
-exclude =
+# Не проверять код на соответствие стандартам W503 и F811
+ignore = 
+    W503,
+    F811,
+    I001,
+    I005,
+    I004,
+    I003,
+# Не проверять код в перечисленных директориях:
+exclude = 
     tests/,
     */migrations/,
-    data/
     venv/,
-    env/,
-    docs/,
-    frontend/,
-    infra/
+    */venv/,
+    env/
+    */env/,
+# Не проверять указанные файлы на соответствие определённым правилам:
 per-file-ignores =
-    */settings.py:E501
+    */settings.py:E501 
