--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -31,10 +31,10 @@ services:
     ports:
       - "9000:80"
     volumes:
-      - nginx.conf:/etc/nginx/conf.d/default.conf
       - frontend/build:/usr/share/nginx/html/
       - docs/:/usr/share/nginx/html/api/docs/
       - static:/static
       - media:/app/media/
+      - data:/app/data/
     depends_on:
       - backend
