--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -21,8 +21,11 @@ server {
   location /api/docs/ {
     proxy_set_header Host $http_host; 
     proxy_pass http://backend:9000/api/docs/;
+    root /usr/share/nginx/html;
     try_files $uri $uri/redoc.html;
   }
+
+    }
   
   location / {
     alias /static/;
