--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 certifi==2024.12.14
 cffi==1.17.1
 charset-normalizer==3.4.1
+colorama==0.4.6
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==44.0.0
@@ -39,6 +40,7 @@ six==1.17.0
 social-auth-app-django==5.4.2
 social-auth-core==4.5.4
 sqlparse==0.5.3
+tqdm==4.67.1
 typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.3.0
