--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -14,6 +14,11 @@ server {
     proxy_pass http://backend:9000/api/;
   }
 
+  location /s/ {
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:9000/s/;
+  }
+
   location /admin/ {
     proxy_set_header Host $http_host; 
     proxy_pass http://backend:9000/admin/;
